--- a/dot_emacs.d/init.org
+++ b/dot_emacs.d/init.org
@@ -984,7 +984,7 @@ Mark scripts executable on save.
        :after (counsel)
        :bind (("C-c p f" . counsel-projectile-find-file)
               ("C-c p d" . counsel-projectile-find-dir)
-              ("C-c p a" . counsel-projectile-ag)
+              ("C-c p a" . counsel-projectile-rg)
               ("C-c p b" . counsel-projectile-switch-to-buffer)
               ("C-c p p" . counsel-projectile-switch-project)
               ("C-c p k" . projectile-kill-buffers)
