--- a/dot_emacs.default/init.org
+++ b/dot_emacs.default/init.org
@@ -58,7 +58,7 @@ Configure remote package archives
               ("melpa-stable" . "https://stable.melpa.org/packages/")
               ("melpa" . "https://melpa.org/packages/")
               ("org" . "http://orgmode.org/elpa/")))
-  ;; (package-initialize)
+  (package-initialize)
 #+END_SRC
 *** Use-package
 First there was =use-package=
